--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ wax/test3.sh
 busybox-1.36.1.tar.bz2
 busybox-1.36.1
 gptfdisk-1.0.10.tar.gz
+wax/recovery_images/*
 wax/lib/buildables/frecon/frecon-repo
 wax/lib/buildables/pv/pv-repo
 wax/lib/buildables/vitetris/vitetris-repo
